--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
-    <title>My Temporary Home
-    </title>
+    <title>My Temporary Home</title>
   </head>
+  <body>
+    <h1>This is the title.
+    </h1>
+    <p>This is a paragraph.
+    </p>
+  </body>
 </html>
