--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>My Temporary Home</title>
+    <title>My Portfolio</title>
   </head>
-  <body>
-    <h1>This is the title.
-    </h1>
-    <p>This is a paragraph.
-    </p>
-  </body>
+<body>
+  <section class="hero">
+    <h1>Hello, I'm Your Name</h1>
+    <p>Data science & fintech enthusiast</p>
+    <button>See my projects</button>
+  </section>
+</body>
 </html>
