--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <p>Data science & fintech enthusiast</p>
     <button>See my projects</button>
   </section>
+  <section class="projects">
+    <h2>Projects</h2>
+    <article class="project">
+      <h3>Fintech Dashboard</h3>
+      <p>Built a Streamlit dashboard for stock analysis</p>
+    </article>
+    <!-- More projects -->
+  </section>
 </body>
 </html>
